bat.bool1.posneg.PosNeg.scala.error
Compilation error:
PosNeg:3: error: not found: value <
  case(a<0,b>0,false)=>return(true)
        ^PosNeg:3: error: not found: value >
  case(a<0,b>0,false)=>return(true)
            ^PosNeg:4: error: not found: value >
  case(a>0,b<0,false)=>return(true)
        ^PosNeg:4: error: not found: value <
  case(a>0,b<0,false)=>return(true)
            ^PosNeg:5: error: not found: value <
  case(a<0,b<0,true)=>return(true)
        ^PosNeg:5: error: not found: value <
  case(a<0,b<0,true)=>return(true)
            ^PosNeg:6: error: not found: value <
  case(a<0,b>0,true)=>return(false)
        ^PosNeg:6: error: not found: value >
  case(a<0,b>0,true)=>return(false)
            ^PosNeg:7: error: not found: value >
  case(a>0,b<0,true)=>return(false)
        ^PosNeg:7: error: not found: value <
  case(a>0,b<0,true)=>return(false)
            ^PosNeg:8: error: not found: value >
  case(a>0,b>0,true)=>return(false)
        ^PosNeg:8: error: not found: value >
  case(a>0,b>0,true)=>return(false)
            ^