bat.bool1.posneg.PosNeg.scala.code
def posNeg(a:Int, b:Int, negative:Boolean):Boolean = {
(a,b,negative)match{
  case(a<0,b>0,false)=>return(true)
  case(a>0,b<0,false)=>return(true)
  case(a<0,b<0,true)=>return(true)
  case(a<0,b>0,true)=>return(false)
  case(a>0,b<0,true)=>return(false)
  case(a>0,b>0,true)=>return(false)
}
}